--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,1 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-python-telegram-bot==22.3
-=======
-python-telegram-bot==20.7
->>>>>>> parent of 6587974 (Update requirements.txt)
-=======
-python-telegram-bot==20.7
->>>>>>> parent of 6587974 (Update requirements.txt)
+python-telegram-bot
